Deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-01-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-01
  template:
    metadata:
      labels:
        app: quarkus-01
        env: dev
    spec:
      containers:
      - name: quarkus-01
        image: adrianofariaalves/quarkus-01-jvm:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: quarkus-01-service
spec:
  selector:
    app: quarkus-01
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-01-route
spec:
  to:
    kind: Service
    name: quarkus-01-service
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
